--- a/lib/css/savana.css
+++ b/lib/css/savana.css
@@ -32,8 +32,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 /* Popup */
 /* ------------------------------------------ */
 
-div.ht-popup-bg,
-div.sjs-modal-bg {
+div.ht-popup-bg {
   background: rgba(255, 255, 255, .5);
   width: 100%;
   height: 100%;
@@ -160,100 +159,7 @@ div.sjs-modal-bg {
   text-decoration: none;
 }
 
-/* Modal */
-/* ------------------------------------------ */
 
-.sjs-modal.sjs-modal-area {
-  max-width: 600px;
-  width: 100%;
-  background: #fff;
-  height: 400px;
-  position: absolute;
-  z-index: 999999;
-  left: 50%;
-  margin-left: -300px;
-  top: 50%;
-  margin-top: -200px;
-  -webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,.2);
-  -moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,.2);
-  box-shadow: 0 8px 6px -6px rgba(0,0,0,.2);
-  display: none;
-}
-
-.sjs-body.sjs-modal-body {
-  height: 100%;
-  background: #fff;
-}
-
-.sjs-close-thik {
-  right: 5px;
-  top: 5px;
-  z-index: 99;
-  position: absolute;
-  -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
-  -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
-  box-shadow: inset 0px 1px 0px 0px #ffffff;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
-  background: -moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: -ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
-  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9', GradientType=0);
-  background-color: #f9f9f9;
-  border: 1px solid #dcdcdc;
-  display: inline-block;
-  cursor: pointer;
-  color: #666666;
-  font-family: Arial;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 6px 24px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #ffffff;
-}
-
-.sjs-close-thik:hover {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
-  background: -moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: -webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: -o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: -ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
-  background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9', GradientType=0);
-  background-color: #e9e9e9;
-}
-
-/* Close Button */
-[class*='ht-close-'] {
-  color: #777;
-  font: 14px/100% arial, sans-serif;
-  position: absolute;
-  right: 8px;
-  text-decoration: none;
-  text-shadow: 0 1px 0 #fff;
-  top: 10px;
-}
-
-[class*='ht-close-']:hover {
-  color: #333;
-}
-
-.ht-hidden {
-  display: none;
-}
-
-/* Larger than phablet */
-@media (max-width: 550px) {
-   .sjs-modal.sjs-modal-area {
-    width: 100%;
-    left: 0px;
-    margin-left: 0px;
-    margin-top: 0px;
-    top: 0px;
-    height: 100%;
-   }
-}
 
 /* Alerts Message */
 /* ------------------------------------------ */
