--- a/lib/css/savana.css
+++ b/lib/css/savana.css
@@ -29,11 +29,15 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */
 @charset "UTF-8";
 
+.ht-clearfix{
+  clear: both;
+}
+
 /* Popup */
 /* ------------------------------------------ */
 
-div.ht-popup-bg {
-  background: rgba(255, 255, 255, .5);
+div.ht-popup-bg, div.ht-preloader-bg {
+  background: rgba(155, 155, 155, .5);
   width: 100%;
   height: 100%;
   position: fixed;
@@ -57,14 +61,7 @@ div.ht-popup-bg {
   box-sizing: border-box;
   left: 50%;
   top: 30%;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  border-radius: 5px 5px 5px 5px;
-  -moz-border-radius: 5px 5px 5px 5px;
-  -webkit-border-radius: 5px 5px 5px 5px;
   overflow: hidden;
-  border: 1px solid #e5e5e5;
 }
 
 a.ht-close-thik {
@@ -90,14 +87,17 @@ a.ht-close-thik:hover{
 
 .ht-body {
   padding: 10px;
-  text-align: center;
+  text-align: left;
+  color: #333;
 }
 
 .ht-header {
-  background: #eeeeee;
   font-weight: bold;
   color: #959595;
   position: relative;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #acca48;
 }
 
 .ht-popup-body {
@@ -114,7 +114,8 @@ a.ht-close-thik:hover{
 }
 
 .ht-footer {
-  border-top: 1px solid #e5e5e5;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .ht-popup-confirm .ht-footer {
@@ -136,12 +137,20 @@ a.ht-close-thik:hover{
 }
 
 .ht-popup-alert .ht-popup-btn-confirm {
-  color: #acca48;
+  color: #fff;
+  font-weight: bold;
+  width: 50%;
+  background: #acca48;
+  opacity: 0.70;
+  -moz-opacity: 0.70;
+  -webkit-opacity: 0.70;
 }
 
 .ht-popup-alert .ht-btn:hover {
-  background: #f5f5f5;
   text-decoration: none;
+  opacity: 0.99;
+  -moz-opacity: 0.99;
+  -webkit-opacity: 0.99;
 }
 
 .ht-popup-confirm .ht-btn {
@@ -162,13 +171,18 @@ a.ht-close-thik:hover{
 }
 
 .ht-popup-confirm .ht-popup-btn-not-confirm {
-  background: #e5e5e5;
-  color: #959595;
+  background: #ca6648;
+  color: #fff;
+  opacity: 0.80;
+  -moz-opacity: 0.80;
+  -webkit-opacity: 0.80;
 }
 
 .ht-popup-confirm .ht-popup-btn-not-confirm:hover {
-  background: #f5f5f5;
   text-decoration: none;
+  opacity: 0.99;
+  -moz-opacity: 0.99;
+  -webkit-opacity: 0.99;
 }
 
 
