feat: add array intersection, docs

--- a/view/index.html
+++ b/view/index.html
@@ -7,7 +7,7 @@
     <title>Savana JS</title>
 </head>
 <body>
-    <h1>Hello!</h1>
+    <h1>Savana JS is working!</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
     <script src="bundle.js"></script>
 </body>
